Make sure the AuthnRequest providers a full coverage of the AuthnRequest protocol due to the specifications

--- a/src/Wizkunde/SAMLBase/Template/Twig/AuthnRequest.xml.twig
+++ b/src/Wizkunde/SAMLBase/Template/Twig/AuthnRequest.xml.twig
@@ -1,17 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <samlp:AuthnRequest xmlns:samlp="urn:oasis:names:tc:SAML:2.0:protocol"
+                    xmlns:saml="urn:oasis:names:tc:SAML:2.0:protocol"
                     ID="{{ UniqueID }}" Version="2.0"
                     IssueInstant="{{ Timestamp }}"
                     ForceAuthn="{{ ForceAuthn }}" IsPassive="{{ IsPassive }}"
                     ProtocolBinding="{{ ProtocolBinding }}"
                     AssertionConsumerServiceURL="{{ SPReturnUrl }}">
+
     <saml:Issuer xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion">{{ Issuer }}</saml:Issuer>
-    <samlp:NameIDPolicy Format="{{ NameIDFormat }}"
-                        SPNameQualifier="{{ Issuer }}" AllowCreate="1"/>
-    <samlp:RequestedAuthnContext xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion"
-                                 Comparison="{{ ComparisonLevel }}">
+
+    <saml:Subject>
+        <saml:BaseID/>
+        <saml:SubjectConfirmation Method="{{ Issuer }}">
+            <saml:BaseID/>
+            <saml:SubjectConfirmationData>
+            </saml:SubjectConfirmationData>
+        </saml:SubjectConfirmation>
+    </saml:Subject>
+
+    <samlp:NameIDPolicy Format="{{ NameIDFormat }}" SPNameQualifier="{{ Issuer }}" AllowCreate="1"/>
+
+    <saml:Conditions>
+        <saml:Condition/>
+    </saml:Conditions>
+
+    <samlp:RequestedAuthnContext>
+        <saml:AuthnContextClassRef>{{ Issuer }}</saml:AuthnContextClassRef>
+    </samlp:RequestedAuthnContext>
+
+    <samlp:RequestedAuthnContext xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" comparison="{{ ComparisonLevel }}">
         <saml:AuthnContextClassRef xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion">
             urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport
         </saml:AuthnContextClassRef>
     </samlp:RequestedAuthnContext>
+
+    <samlp:Scoping>
+        <samlp:IDPList>
+            <samlp:IDPEntry ProviderID="{{ Issuer }}" Name="string"/>
+            <samlp:GetComplete>{{ Issuer }}</samlp:GetComplete>
+        </samlp:IDPList>
+        <samlp:RequesterID>{{ Issuer }}</samlp:RequesterID>
+    </samlp:Scoping>
 </samlp:AuthnRequest>
