Allow for a Single Logout request

--- a/src/Wizkunde/SAMLBase/Template/Twig/AuthnRequest.xml.twig
+++ b/src/Wizkunde/SAMLBase/Template/Twig/AuthnRequest.xml.twig
@@ -3,7 +3,8 @@
                     xmlns:saml="urn:oasis:names:tc:SAML:2.0:protocol"
                     ID="{{ UniqueID }}" Version="2.0"
                     IssueInstant="{{ Timestamp }}"
-                    ForceAuthn="{{ ForceAuthn }}" IsPassive="{{ IsPassive }}"
+                    ForceAuthn="{{ ForceAuthn }}"
+                    IsPassive="{{ IsPassive }}"
                     ProtocolBinding="{{ ProtocolBinding }}"
                     AssertionConsumerServiceURL="{{ SPReturnUrl }}">
 
