--- a/src/Wizkunde/SAMLBase/Template/Twig/LogoutRequest.xml.twig
+++ b/src/Wizkunde/SAMLBase/Template/Twig/LogoutRequest.xml.twig
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <samlp:LogoutRequest xmlns:samlp="urn:oasis:names:tc:SAML:2.0:protocol"
-                     xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" ID="{{ UniqueID }}"
-                     Version="2.0" Destination="{{ LogoutURL }}" IssueInstant="{{ Timestamp }}">
+                     xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion"
+                     ID="{{ UniqueID }}"
+                     Version="2.0"
+                     IssueInstant="{{ Timestamp }}">
     <saml:Issuer>{{ Issuer }}</saml:Issuer>
-    <NameID Format="{{ NameIDFormat }}" NameQualifier="{{ LogoutURL }}">
+    <saml:NameID Format="{{ NameIDFormat }}" NameQualifier="{{ Issuer }}">
         {{ NameID }}
-    </NameID>
+    </saml:NameID>
     <samlp:SessionIndex>{{ SessionIndex }}</samlp:SessionIndex>
 </samlp:LogoutRequest>
