Handle Artifact Resolution

--- a/src/Wizkunde/SAMLBase/Template/Twig/AuthnRequest.xml.twig
+++ b/src/Wizkunde/SAMLBase/Template/Twig/AuthnRequest.xml.twig
@@ -6,7 +6,9 @@
                     ForceAuthn="{{ ForceAuthn }}"
                     IsPassive="{{ IsPassive }}"
                     ProtocolBinding="{{ ProtocolBinding }}"
-                    AssertionConsumerServiceURL="{{ SPReturnUrl }}">
+                    AssertionConsumerServiceURL="{{ SPReturnUrl }}"
+                    AssertionConsumerServiceIndex="0"
+                    AttributeConsumingServiceIndex="0">
 
     <saml:Issuer xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion">{{ Issuer }}</saml:Issuer>
 
