SURFSDI-170 update twig metadata template
Signed-off-by: stefandb <stefan@esser-emmerik.nl>

--- a/src/Wizkunde/SAMLBase/Template/Twig/Metadata.xml.twig
+++ b/src/Wizkunde/SAMLBase/Template/Twig/Metadata.xml.twig
@@ -13,7 +13,7 @@
         </md:KeyDescriptor>
         <md:ArtifactResolutionService isDefault="true" index="0"
                                       Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP"
-                                      Location="https://sp.example.com/SAML2/ArtifactResolution"/>
+                                      Location="{{ postURL }}"/>
         <md:NameIDFormat>
             urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
         </md:NameIDFormat>
@@ -22,10 +22,10 @@
         </md:NameIDFormat>
         <md:AssertionConsumerService isDefault="true" index="0"
                                      Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST"
-                                     Location="https://sp.example.com/SAML2/SSO/POST"/>
+                                     Location="{{ postURL }}"/>
         <md:AssertionConsumerService index="1"
                                      Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact"
-                                     Location="https://sp.example.com/SAML2/Artifact"/>
+                                     Location="{{ postURL }}"/>
         <md:AttributeConsumingService isDefault="true" index="1">
             <md:ServiceName xml:lang="en">
                 Service Provider Portal
